# live-bootcamp-project

./: README.md  compose.yml  flake.nix
.devcontainer/: README.md  devcontainer.generic.json  devcontainer.json
.devcontainer/project/live-bootcamp-project/: post_create.sh  project.env  services.tsv
.devcontainer/scripts/: post_create.sh  start_services.sh  stop_services.sh
.devcontainer/scripts/lib/: devcontainer-common.sh
auth-service/: Cargo.toml
auth-service/src/: lib.rs  main.rs
auth-service/src/routes/: mod.rs  signup.rs  verify_token.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  routes.rs  signup.rs  verify_2fa.rs  verify_token.rs
