[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.6"
getset = "0.1.6"
serde = { version = "1.0.228", features = ["std", "derive", "serde_derive"] }
serde_json = "1.0.149"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
